[project]
name = "PgUi"
version = "0.0.1"
authors = [
  { name="Brian Zhou", email="brianzhou1102@gmail.com" },
]
description = "A simple ui library for pygame"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame"
]

[project.optional-dependencies]
test = ["pytest", "pytest-runner"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
